# mariadb-columnstore-engine

./: .drone.jsonnet  .git-blame-ignore-revs  .gitignore  BUILD.md  CMakeLists.txt  DEVELOPING.md  VERSION  cmake-format.py
cmapi/: .gitignore  CMakeLists.txt  README.md  VERSION.template  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  service.template
cmapi/cmake/: cmapi_misc.cmake
cmapi/cmapi_server/: SingleNode.xml  __main__.py  cmapi_logger.conf  constants.py  exceptions.py  failover_agent.py  helpers.py  logging_management.py  node_manipulation.py  pyproject.toml  sentry.py  trace_tool.py  traced_aiohttp.py  traced_session.py  tracer.py
cmapi/dev_tools/: activate  piptools.sh
cmapi/failover/: agent_comm.py  config.py  node_monitor.py  shared_storage_monitor.py
cmapi/integration_tests/: README.md  cluster_mgmt.py  conftest.py  integration_tests.yml  ssh.py  state.py  test_add_node.py  test_remove_node.py  utils.py
cmapi/mcs_cluster_tool/: README.md  README_DEV.md  __main__.py  backup_commands.py  cluster_app.py  cmapi_app.py  constants.py  decorators.py  helpers.py  mcs.1  mcs_cli_log.conf  restore_commands.py  tools_commands.py
cmapi/scripts/: cs_package_manager.sh  mcs_backup_manager.sh  trace_to_plantuml.py
cmapi/tracing/: __init__.py  backend.py  sentry.py  sentry_backend.py  span.py  trace_tool.py  traced_aiohttp.py  traced_session.py  traceparent_backend.py  tracer.py  utils.py
cmapi/updater/: cmapi_updater.service.template  cmapi_updater.sh
dbcon/ddlpackage/: CMakeLists.txt  ddl.l  ddl.y  ddlpkg.h  droptable.cpp  serialize.cpp  sqlparser.h
dbcon/ddlpackageproc/: CMakeLists.txt  altertableprocessor.cpp  createtableprocessor.cpp  ddlpackageprocessor.cpp  droptableprocessor.cpp
dbcon/dmlpackage/: CMakeLists.txt  commanddmlpackage.h  deletedmlpackage.cpp  dmlparser.cpp  insertdmlpackage.cpp  updatedmlpackage.cpp
dbcon/mysql/: CMakeLists.txt  ha_exists_sub.cpp  ha_from_sub.cpp  ha_in_sub.cpp  ha_mcs.cpp  ha_mcs.h  ha_mcs_client_udfs.cpp  ha_mcs_datatype.h  ha_mcs_ddl.cpp  ha_mcs_dml.cpp  ha_mcs_execplan.cpp  ha_mcs_execplan_helpers.cpp  ha_mcs_execplan_helpers.h  ha_mcs_execplan_parseinfo_bits.h  ha_mcs_execplan_walks.cpp  ha_mcs_execplan_walks.h  ha_mcs_impl.cpp  ha_mcs_impl.h  ha_mcs_impl_if.h  ha_mcs_logging.h  ha_mcs_partition.cpp  ha_mcs_pushdown.cpp  ha_mcs_pushdown.h  ha_mcs_sysvars.cpp  ha_mcs_sysvars.h  ha_mcs_udf.cpp  ha_pseudocolumn.cpp  ha_scalar_sub.cpp  ha_select_sub.cpp  ha_subquery.h  ha_tzinfo.cpp  ha_view.h  ha_window_function.cpp  idb_mysql.h  install_mcs_mysql.sh.in  is_columnstore_columns.cpp  is_columnstore_extents.cpp  is_columnstore_files.cpp  rbo_apply_parallel_ces.cpp  rbo_apply_parallel_ces.h  (+5 more)
oam/install_scripts/: CMakeLists.txt  columnstore-post-install.in  mcs-prestop-workernode.sh.in  mcs-savebrm.py.in  mcs-workernode.service.in
oam/oamcpp/: CMakeLists.txt  liboamcpp.cpp  liboamcpp.h  oamcache.cpp  oamcache.h
tools/: CMakeLists.txt
tools/cfread/: CMakeLists.txt
tools/clearShm/: CMakeLists.txt
tools/cleartablelock/: CMakeLists.txt  cleartablelock.cpp  cleartablelockthread.cpp  cleartablelockthread.h
tools/configMgt/: CMakeLists.txt
tools/cplogger/: CMakeLists.txt
tools/dbbuilder/: CMakeLists.txt  dbbuilder.cpp
tools/dbloadxml/: CMakeLists.txt
tools/ddlcleanup/: CMakeLists.txt  ddlcleanup.cpp
tools/ddldriver/: CMakeLists.txt
tools/dmldriver/: CMakeLists.txt
tools/editem/: CMakeLists.txt
tools/getConfig/: CMakeLists.txt
tools/idbmeminfo/: CMakeLists.txt
tools/passwd/: CMakeLists.txt
tools/qfe/: CMakeLists.txt
tools/rebuildEM/: CMakeLists.txt
tools/rgprint/: CMakeLists.txt
tools/sendPlan/: CMakeLists.txt
tools/setConfig/: CMakeLists.txt
tools/viewtablelock/: CMakeLists.txt
utils/: CMakeLists.txt
utils/basic/: string_utils.h
utils/batchloader/: CMakeLists.txt  batchloader.cpp  batchloader.h
utils/cacheutils/: CMakeLists.txt
utils/cloudio/: CMakeLists.txt  SMFileFactory.cpp  SMFileSystem.cpp
utils/common/: CMakeLists.txt  atomicops.h  branchpred.h  cgroupconfigurator.h  columnwidth.h  countingallocator.h  genericparser.h  hasher.h  hashfamily.h  nullstring.h  poolallocator.cpp  poolallocator.h  service.h  simd_arm.h  simd_sse.h  simpleallocator.h  statistics.cpp  stlpoolallocator.h  string_prefixes.cpp  utils_utf8.h
utils/compress/: CMakeLists.txt  idbcompress.cpp
utils/configcpp/: CMakeLists.txt  configcpp.cpp  configcpp.h  writeonce.h  xmlparser.cpp
utils/dataconvert/: CMakeLists.txt  dataconvert.cpp  dataconvert.h
utils/ddlcleanup/: CMakeLists.txt
utils/funcexp/: CMakeLists.txt  func_abs.cpp  func_add_time.cpp  func_ascii.cpp  func_between.cpp  func_bitwise.cpp  func_cast.cpp  func_ceil.cpp  func_char.cpp  func_char_length.cpp  func_coalesce.cpp  func_concat_oracle.cpp  func_concat_ws.cpp  func_conv.cpp  func_convert_tz.cpp  func_crc32.cpp  func_date.cpp  func_date_add.cpp  func_date_format.cpp  func_day.cpp  func_dayname.cpp  func_dayofweek.cpp  func_dayofyear.cpp  func_decode.cpp  func_div.cpp  func_elt.cpp  func_encode.cpp  func_exp.cpp  func_extract.cpp  func_find_in_set.cpp  func_floor.cpp  func_from_days.cpp  func_from_unixtime.cpp  func_get_format.cpp  func_greatest.cpp  func_hex.cpp  func_hour.cpp  func_idbpartition.cpp  func_if.cpp  func_ifnull.cpp  (+102 more)
utils/idbdatafile/: BufferedFile.cpp  CMakeLists.txt  IDBFileSystem.cpp  IDBFileSystem.h  IDBLogger.cpp  IDBPolicy.cpp  PosixFileSystem.cpp  utility.h
utils/joiner/: CMakeLists.txt  joiner.h  joinpartition.cpp  tuplejoiner.cpp  tuplejoiner.h
utils/libmarias3/: CMakeLists.txt
utils/libmysql_client/: CMakeLists.txt  libmysql_client.cpp
utils/loggingcpp/: CMakeLists.txt  ErrorMessage.txt  message.cpp  outofmemoryexcept.h
utils/mariadb_charset/: CMakeLists.txt  charset.cpp  collation.h
utils/messageqcpp/: CMakeLists.txt  bytestream.cpp  bytestream.h  inetstreamsocket.cpp  messagequeue.cpp  messagequeuepool.cpp  messagequeuepool.h  samenodepseudosocket.cpp
utils/pron/: CMakeLists.txt
utils/querystats/: CMakeLists.txt  querystats.cpp
(+784 files in other folders)
